--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,4 +1,9 @@
-*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+// The new CSS reset - version 1.11.3 (last updated 25.08.2024)
+// GitHub page: https://github.com/elad2412/the-new-css-reset
+
+*:where(
+    :not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)
+  ) {
   all: unset;
   display: revert;
 }
@@ -67,7 +72,7 @@ meter {
   display: none;
 }
 
-:where([contenteditable]:not([contenteditable=false])) {
+:where([contenteditable]:not([contenteditable="false"])) {
   -moz-user-modify: read-write;
   -webkit-user-modify: read-write;
   overflow-wrap: break-word;
@@ -75,7 +80,7 @@ meter {
   -webkit-user-select: auto;
 }
 
-:where([draggable=true]) {
+:where([draggable="true"]) {
   -webkit-user-drag: element;
 }
 
@@ -87,40 +92,3 @@ meter {
 ::-webkit-details-marker {
   display: none;
 }
-
-:root {
-  --clr-value: white;
-  --ff-value: serif;
-  --fw-regular: 400;
-  --fs-value: 1rem;
-  --lh-value: 100%;
-  --ls-value: 0rem;
-  --spc-value: 1rem;
-  --rds-value: 1rem;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  height: inherit;
-}
-
-#root {
-  height: inherit;
-  display: flex;
-  flex-direction: column;
-}
-
-.container {
-  margin: 0 auto;
-  padding: 0;
-  width: min(100%, 45rem);
-}
-
-.app {
-  background-color: pink;
-}
-
-/*# sourceMappingURL=index.css.map */
